-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0, 6.7.1, 6.8.0 FF
-
None
-
-
428f64a12 (dev), a8ffb369b (6.8), ea584e197 (6.7), 265ae27a3 (dev), 15d634044 (6.8), 4e08af242 (6.7)
Since Qt 6.7.0 here is a warning on loading every embedded QRC image in QML TextEdit
QQuickPixmap: connectFinished() called when not loading.
Code sample:
import QtQuick Window { width: 640 height: 480 visible: true TextEdit { text: '<img src="document-new.png"/>' // or any other image from QRC textFormat: Qt.RichText } }
See standalone example untitled16.zip