TextEdit: load inline images from resources the same as local files

QQuickTextEdit::loadResource() now loads resource images with QFile
rather than creating a QQuickPixmap "job". connectFinished() was
complaining, presumably because loading happens instantly, and we don't
need async notification when it gets done.

Fixes: QTBUG-125526
Pick-to: 6.7 6.8
Change-Id: Ibcea546104aefb35ee333dfd0ac13c07549e33c7
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>