tests/auto/quick/qquicktextedit/data/embeddedImageResource.qml
@@ -1,0 +1,6 @@
+import QtQuick 2.0
+
+TextEdit {
+    textFormat: TextEdit.RichText
+    text: "<img src='qrc:/data/green-16x16.png'>"
+}
